--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Frontend mentor | Tip Calculator</title>
 </head>
 <body>
-    <section class="main">
+    <div class="main">
         <img src="assets/images/logo.svg" alt="Image of a logo" class="main__logo">
         <div class="container">
             <div class="main__bigBox">
                 <div class="main__bigBoxInputSection">
                     <div class="main__bigBoxInputSectionBill">
                         <h3 class="main__bigBoxInputSectionHeader">Bill</h3>
-                        <input type="number" name="billAmount" id="billAmount" class="main__bigBoxInputSectionInpBox" dir="rtl">
+                        <input type="number" name="billAmount" id="billAmount" class="main__bigBoxInputSectionInpBox" dir="rtl" placeholder="0">
                         <img src="assets/images/icon-dollar.svg" alt="Icon of a dollar" class="main__bigBoxInputSectionPicture">
                     </div>
 
@@ -49,33 +49,34 @@
                             <h3 class="main__bigBoxInputSectionHeader">Number of people</h3>
                             <h3 class="main__bigBoxInputSectionHeader hidden">Can't be zero</h3>
                         </div>
-                        <input type="number" name="peopleNumber" id="peopleNumber" class="main__bigBoxInputSectionInpBox" dir="rtl">
+                        <input type="number" name="peopleNumber" id="peopleNumber" class="main__bigBoxInputSectionInpBox" dir="rtl" placeholder="0">
                         <img src="assets/images/icon-person.svg" alt="Icon of a person" class="main__bigBoxInputSectionPicture">
                     </div>
                 </div>
 
                 <div class="main__bigBoxOutputSection">
-                    <div class="main__bigBoxOutputSectionItem">
-                        <div class="main__bigBoxOutputSectionItemText">
-                            <h3 class="main__bigBoxOutputSectionItemTextHeader">Tip amount</h3>
-                            <h3 class="main__bigBoxOutputSectionItemTextSubHeader">/ person</h3>
+                    <div class="main__bigBoxOutputSectionAmounts">
+                        <div class="main__bigBoxOutputSectionItem">
+                            <div class="main__bigBoxOutputSectionItemText">
+                                <h3 class="main__bigBoxOutputSectionItemTextHeader">Tip amount</h3>
+                                <h3 class="main__bigBoxOutputSectionItemTextSubHeader">/ person</h3>
+                            </div>
+                            <h3 class="main__bigBoxOutputSectionItemNumber">$4.27</h3>
                         </div>
-                        <h3 class="main__bigBoxOutputSectionItemNumber">$4.27</h3>
-                    </div>
-                    <div class="main__bigBoxOutputSectionItem">
-                        <div class="main__bigBoxOutputSectionItemText">
-                            <h3 class="main__bigBoxOutputSectionItemTextHeader">Total</h3>
-                            <h3 class="main__bigBoxOutputSectionItemTextSubHeader">/ person</h3>
+                        <div class="main__bigBoxOutputSectionItem">
+                            <div class="main__bigBoxOutputSectionItemText">
+                                <h3 class="main__bigBoxOutputSectionItemTextHeader">Total</h3>
+                                <h3 class="main__bigBoxOutputSectionItemTextSubHeader">/ person</h3>
+                            </div>
+                            <h3 class="main__bigBoxOutputSectionItemNumber">$4.27</h3>
                         </div>
-                        <h3 class="main__bigBoxOutputSectionItemNumber">$4.27</h3>
                     </div>
-
                     <div class="main__bigBoxOutputSectionReset">
                         <h3 class="main__bigBoxOutputSectionResetHeader">RESET</h3>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 </body>
 </html>
