all functionality done

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
                     <div class="main__bigBoxInputSectionTip">
                         <h3 class="main__bigBoxInputSectionHeader">Select Tip %</h3>
                         <div class="main__bigBoxInputSectionTipPresets">
-                            <div class="main__bigBoxInputSectionTipPresetsItem">
-                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader" id="5p">5%</h4>
+                            <div class="main__bigBoxInputSectionTipPresetsItem active" id="5p">
+                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader">5%</h4>
                             </div>
-                            <div class="main__bigBoxInputSectionTipPresetsItem">
-                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader" id="10p">10%</h4>
+                            <div class="main__bigBoxInputSectionTipPresetsItem" id="10p">
+                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader">10%</h4>
                             </div>
-                            <div class="main__bigBoxInputSectionTipPresetsItem">
-                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader" id="15p">15%</h4>
+                            <div class="main__bigBoxInputSectionTipPresetsItem" id="15p">
+                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader">15%</h4>
                             </div>
-                            <div class="main__bigBoxInputSectionTipPresetsItem">
-                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader" id="25p">25%</h4>
+                            <div class="main__bigBoxInputSectionTipPresetsItem" id="25p">
+                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader">25%</h4>
                             </div>
-                            <div class="main__bigBoxInputSectionTipPresetsItem">
-                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader" id="50p">50%</h4>
+                            <div class="main__bigBoxInputSectionTipPresetsItem" id="50p">
+                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader">50%</h4>
                             </div>
                             <div class="main__bigBoxInputSectionTipPresetsItem">
                                 <h4 class="main__bigBoxInputSectionTipPresetsItemHeader">Custom</h4>
@@ -71,7 +71,7 @@
                             <h3 class="main__bigBoxOutputSectionItemNumber" id="totalAmount">$0.00</h3>
                         </div>
                     </div>
-                    <div class="main__bigBoxOutputSectionReset" id="resetBtn">
+                    <div class="main__bigBoxOutputSectionReset disabled" id="resetBtn">
                         <h3 class="main__bigBoxOutputSectionResetHeader">RESET</h3>
                     </div>
                 </div>
