functionality has been updated and finished

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
                             <div class="main__bigBoxInputSectionTipPresetsItem" id="50p">
                                 <h4 class="main__bigBoxInputSectionTipPresetsItemHeader">50%</h4>
                             </div>
-                            <div class="main__bigBoxInputSectionTipPresetsItem">
-                                <h4 class="main__bigBoxInputSectionTipPresetsItemHeader">Custom</h4>
+                            <div class="main__bigBoxInputSectionTipPresetsItem accentedItem">
+                                <div class="btnOverlay" id="overlay">
+                                    <h4 class="main__bigBoxInputSectionTipPresetsItemHeader">Custom</h4>
+                                </div>
+                                <input type="number" name="tipInp" id="tipInp" dir="rtl">
                             </div>
                         </div>
                     </div>
